<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cadastrar_disciplina"
            android:id="@+id/btnCadastroDisciplina"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_alignBaseline="@+id/btnVoltarTabelaDis"
            android:layout_alignBottom="@+id/btnVoltarTabelaDis"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:id="@+id/btnVoltarTabelaDis"
            android:layout_gravity="right"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/btnCadastroDisciplina"
            android:layout_toEndOf="@+id/btnCadastroDisciplina" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/nome"
            android:id="@+id/textView3"
            android:layout_marginLeft="24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/status"
            android:id="@+id/textView5"
            android:textStyle="bold"
            android:layout_marginLeft="90dp"

            android:layout_marginStart="53dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3" />
    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvShowAllDisciplinas"
        android:layout_gravity="center_horizontal"
        android:choiceMode="multipleChoice" />
</LinearLayout>
